# Superfit

./: .gitignore  DEPLOYMENT.md  Procfile  README.md  app.py  pyproject.toml  requirements.txt
GUISuperfit/mergedapp/: SN2019ein.csv  SN2019ein.p02.sfo  app.py  data.csv
GUISuperfit/mergedapp/assets/: style.css
GUISuperfit/mergedapp/gal/: E  S0  SB1  SB2  SB3  SB4  SB5  SB6  Sa  Sb  Spectra stuff.ipynb
GUISuperfit/mergedapp/pages/: sfgui.py  sggui.py
NGSF/: SN2019ein.p02.csv  SN2019ein.p02_binned.txt  setup.py
NGSF/NGSF/: SF_functions.py  auxiliary.py  get_metadata.py  params.py  sf_class.py
NGSF/bank/binnings/10A/gal/: E  S0  SB1  SB2  SB3  SB4  SB5  SB6  Sa  Sb  Sc  sdssquasar.asc
NGSF/bank/binnings/30A/gal/: E  S0  SB1  SB2  SB3  SB4  SB5  SB6  Sa  Sb  Sc  sdssquasar.asc
NGSF/bank/original_resolution/sne/Ca-Ia/2016hnk/: info  photometry  wiserep_spectra.csv
NGSF/bank/original_resolution/sne/Ca-Ia/2019ofm/: SN2019ofm_2019-08-27_04-08-29_P200_DBSP_TNS.ascii  wiserep_spectra.csv
NGSF/bank/original_resolution/sne/Ca-Ia/PTF09dav/: PTF09dav_2009-10-22_08-41-17_Keck1_LRIS_PTF.ascii  info  photometry  wiserep_spectra.csv
NGSF/bank/original_resolution/sne/Ca-Ib/2005E/: 2005E_2005-02-06_00-00-00_P200_DBSP_CCCP.flm  wiserep_spectra.csv
NGSF/bank/original_resolution/sne/Ca-Ib/2007ke/: wiserep_spectra.csv
NGSF/bank/original_resolution/sne/Ca-Ib/2010et/: 2010et_2010-10-03_00-00-00_Keck1_LRIS_PTF.ascii  wiserep_spectra.csv
NGSF/bank/original_resolution/sne/Ca-Ib/2016hgs/: info  photometry  (+2 more)
NGSF/bank/original_resolution/sne/SLSN-II/: SLSN_II
(+2827 files in other folders)
