[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superfit"
version = "0.1.0"
requires-python = ">=3.10,<3.11"  
dependencies = [
  "astropy==5.3.4",
  "dash==2.15.0",
  "dash-bootstrap-components==1.5.0",
  "dash-core-components==2.0.0",
  "dash-daq==0.5.0",
  "dash-html-components==2.0.0",
  "dash-labs==1.2.0",
  "dash-table==5.0.0",
  "matplotlib==3.5.3",
  "pandas==1.3.5",
  "plotly==5.18.0",
  "pyastronomy==0.22.0",
  "scipy==1.7.3",
  "extinction==0.4.8",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["NGSF", "GUIsuperfit*"], exclude = ["tests*", "docs*"] } }

[tool.setuptools.package-data]
NGSF = ["**/*"]
GUIsuperfit = ["**/*"]
